name:                lockpool
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/chessai/lockpool.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:           
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Concurrent.LockPool
  -- other-modules:       
  other-extensions:    BangPatterns
  build-depends:       base >=4.10 && <5.0
                     , clock
                     , stm
  default-language:    Haskell2010
